custom-resources/keycloak/keycloak-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
  - name: gateway
    namespace: httpbin
    sectionName: https
  hostnames: 
  - 'keycloak..chainguard.dev'
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keycloak
      port: 80
